# CryptoIndexFund

./: CMakeLists.txt  main.cpp
include/: BinanceInterface.h  CoinMarketCapInterface.h  MarketAction.h  Utility.h  WebSocketSSL.h
src/: BinanceInterface.cpp  CoinMarketCapInterface.cpp  MarketAction.cpp  Utility.cpp  WebSocketSSL.cpp
